--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-
 :root {
   --primary-color: #54bd95;
   --secondary-color: #191a15;
@@ -11,8 +10,8 @@
   --yellow-color: #ffc728;
   --offwhite-color: #f9f8fe;
   --card-color: #f9fafb;
+  --light-green: #6BC2A1;
 }
-
 .home {
   background-image: linear-gradient(
     135deg,
@@ -21,50 +20,46 @@
     #e4f1ea 100%
   );
 }
-
 .text {
   color: var(--text-color) !important;
 }
-
 .green {
   color: white !important;
   background-color: var(--primary-color) !important;
 }
-
 .btns-media {
   display: none;
 }
-
 /* features */
 .features {
   background-image: linear-gradient(to right, #ffd6d63a, #fff);
 }
-
+.cards{
+  transition: all 0.5s ease;
+}
+.cards:hover{
+  transform: scale(1.03);
+}
 /* reached */
 .reached {
   background-color: var(--offwhite-color);
 }
-
 .reached img {
   background-color: white;
   padding: 10px;
   box-shadow: 0px 4px 9px 0px #0000000d;
 }
-
 .check {
   background-color: var(--primary-color);
 }
-
 .plans {
   background-image: linear-gradient(90deg, #fff, #54be9521);
 }
-
 .list ul {
   display: flex;
   flex-direction: column;
   list-style-type: none;
 }
-
 .list ul li {
   padding: 10px;
 }
@@ -72,6 +67,11 @@
 .bill {
   box-shadow: 0px 4px 9px 0px #0000000d;
   width: 220px;
+  transition: all 0.5s ease;
+}
+.bill.bill:hover{
+  transform: scale(1.03);
+  cursor: pointer;
 }
 .prices {
   background: none !important;
@@ -85,9 +85,16 @@
   color: var(--primary-color) !important;
   background-color: white !important;
   box-shadow: 0px 4px 9px 0px #0000000D;
-
 }
-
+.pro{
+  background-color: var(--primary-color);
+}
+.pro-btn{
+  background-color: rgba(255, 255, 255, 0.308);
+}
+.pro-bg{
+  top: 112px;
+}
 @media screen and (max-width: 991px) {
   .btns-media {
     display: block;
